fix input align problem

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,14 @@ body {
   max-width: $container-max-width;
   margin: 0 auto;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
